--- a/style.css
+++ b/style.css
@@ -11,15 +11,31 @@ body{
   background-color: whitesmoke;
 }
 
-h1{
+/* Title */
+h1,h2{
   text-align: center;
-  margin-top: 25px;
-  margin-bottom: 15px;
-  font-size: 25px;
-  letter-spacing: 10px;
+  
+  
   text-transform: uppercase;
 }
 
+h1{
+  
+  margin-bottom: 15px;
+  margin-top: -5px;
+  font-size: 20px;
+  letter-spacing: 15px;
+  font-weight: 900;
+}
+
+h2{
+  /* margin-top: 25px; */
+  font-size: 40px;
+  margin-bottom: 0px;
+
+}
+
+/* Loader */
 .loader{
   position: fixed;
   top: 0;
@@ -34,4 +50,25 @@ h1{
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+/* Image Container */
+.image-container{
+  margin: 10px 30%;
+}
+
+.image-container img{
+  width: 100%;
+  margin-top: 5px;
+}
+
+/* Media Query Large Smartphone */
+@media screen and (max-width: 600px){
+  h1{
+    font-size: 14px;
+    letter-spacing: 12px;
+  }
+  .image-container{
+    margin: 10px;
+  }
 }
